Set up most of datagen